--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -386,5 +386,5 @@
     <string name="send_feedback_sum">Via email</string>
     <string name="github_title">Go to GitHub</string>
     <string name="version_title">Version</string>
-    <string name="version" translatable="false">v1-rc.4</string>
+    <string name="version" translatable="false">v1-RC.5</string>
 </resources>
