Commit fragment changes allowing for state loss to prevent exceptions, add PWR in Isolated AP view, improve watchdog and add notification for when the app is in the background and it detects something

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 
     <!-- Notification -->
     <string name="notification_title">Hijacker is running in the background</string>
+    <string name="notification2_title">Hijacker watchdog detected a problem</string>
     <string name="stop_attacks">Stop attacks</string>
 
     <!-- Main -->
