--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="su_notfound_title">SuperSU not found!</string>
     <string name="su_notfound">You might be rooted, but at the moment, this application requires SuperSU to function properly.
         You can continue if you believe that your root solution will work. Please don\'t report bugs.</string>
+    <string name="busybox_notfound_title">Busybox not found!</string>
+    <string name="busybox_notfound">There is no busybox installed on your device. This application requires busybox to function properly.</string>
 
     <!-- wpa_thread -->
     <string name="stopped_to_capture">Stopped aireplay to capture handshake…</string>
@@ -99,10 +101,6 @@
     <!-- RestoreFirmwareDialog -->
     <string name="restore">Restore</string>
     <string name="restored">Backup restored</string>
-
-    <!-- ErrorDialog -->
-    <string name="eoe_title">Error on ErrorDialog</string>
-    <string name="eoe_message">Yes, this is an ErrorDialog saying that there was an error displaying a previous ErrorDialog.</string>
 
     <!-- StatsDialog -->
     <string name="ap_stats">Statistics</string>
