Code cleanup and improvements, catch NumberFormatException in getPIDs(), add busybox check, change firmware backup to external storage to survive full app reinstall, add probe reading from airodump for stations, update busybox to 1.26.2, update version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,7 @@
     <string name="lastseen">Last seen:</string>
     <string name="essid">ESSID:</string>
     <string name="manuf">Manufacturer:</string>
+    <string name="probes">Probes:</string>
 
     <!-- STDialog (xml) -->
     <string name="frames">Frames:</string>
